--- a/app/src/main/res/layout/fragment_highscore_temp.xml
+++ b/app/src/main/res/layout/fragment_highscore_temp.xml
@@ -4,6 +4,26 @@
     android:layout_height="match_parent"
     tools:context="jepsen.dk.galgeleg_fragm.highscore_temp">
 
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="350dp"
+        android:background="#81D4FA"
+        android:layout_marginBottom="16dp"
+        android:layout_centerHorizontal="true">
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:text="Highscore"
+        android:id="@+id/highscortTitel"
+        android:gravity="center_horizontal"
+        android:textSize="40dp"
+        android:fontFamily="sans-serif-medium"
+        android:padding="16dp"/>
+
 
     <LinearLayout
         android:orientation="horizontal"
@@ -14,6 +34,7 @@
 
         <ListView
             android:layout_width="0px"
+            android:layout_marginLeft="16dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:id="@+id/highViewLeft"
@@ -21,5 +42,6 @@
             android:layout_alignParentStart="true"
             android:choiceMode="singleChoice" />
 
+    </LinearLayout>
     </LinearLayout>
 </TableLayout>
