--- a/app/src/main/res/layout/fragment_highscore_view.xml
+++ b/app/src/main/res/layout/fragment_highscore_view.xml
@@ -9,7 +9,9 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_column="0">
+        android:layout_column="0"
+
+        >
 
         <fragment
             android:layout_width="match_parent"
