--- a/app/src/main/res/layout/fragment_svaerhedsgrad.xml
+++ b/app/src/main/res/layout/fragment_svaerhedsgrad.xml
@@ -11,6 +11,7 @@
 
         >
 
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -18,47 +19,52 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:id="@+id/textView"
             android:layout_gravity="center_horizontal"
-            android:textSize="40dp"
+            android:textSize="45dp"
             android:fontFamily="sans-serif-medium"
             android:padding="16dp"
             />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/galgeImageView"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/galge" />
 
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:gravity="center"
+            android:layout_marginTop="16dp">
 
             <Button
-                android:layout_width="224dp"
-                android:layout_height="112dp"
+                android:layout_width="200dp"
+                android:layout_height="56dp"
                 android:id="@+id/knapLet"
                 android:text="Let"
-                android:textSize="32dp"
                 android:fontFamily="sans-serif-medium"
                 android:elevation="2dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/knap_blaa_bg"
                 />
 
             <Button
-                android:layout_width="224dp"
-                android:layout_height="112dp"
+                android:layout_width="200dp"
+                android:layout_height="56dp"
                 android:id="@+id/knapMedium"
                 android:text="Medium"
-                android:textSize="32dp"
                 android:fontFamily="sans-serif-medium"
                 android:elevation="2dp"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="10dp"
                 android:background="@drawable/knap_blaa_bg"
                 />
 
             <Button
-                android:layout_width="224dp"
-                android:layout_height="112dp"
+                android:layout_width="200dp"
+                android:layout_height="56dp"
                 android:id="@+id/knapSvaer"
                 android:text="Svær"
-                android:textSize="32dp"
                 android:fontFamily="sans-serif-medium"
                 android:elevation="2dp"
                 android:background="@drawable/knap_blaa_bg"
