--- a/app/src/main/res/layout/fragment_name_frag.xml
+++ b/app/src/main/res/layout/fragment_name_frag.xml
@@ -18,8 +18,8 @@
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="56dp"
         android:background="@drawable/knap_blaa_bg"
         android:text="Gem"
         android:id="@+id/saveButton"
