--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,22 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
-    <item android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        android:orderInCategory="100"
-        app:showAsAction="never" />
     <item
-        android:id="@+id/action_search"
-        android:orderInCategory="200"
-        android:title="Ord"
-        app:showAsAction="ifRoom"
-        ></item>
-    <item
-        android:id="@+id/action_user"
+        android:id="@+id/action_ordliste"
         android:orderInCategory="300"
-        android:title="User"
-        app:showAsAction="ifRoom">
-
+        android:title="Ordliste"
+        app:showAsAction="never">
     </item>
 
 </menu>
