Tilføjelse: ProgressBar tilføjet, så man ikke kan starte spillet før ord er hentet fra nettet

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:showIn="@layout/activity_main"
+    tools:showIn="@layout/fragment_main"
     tools:context=".MainActivityFragment"
     android:background="@color/primary_color"
     >
@@ -23,7 +23,5 @@
         android:layout_height="match_parent"
         android:layout_alignParentTop="true"
         />
-
-
 
 </RelativeLayout>
